# mm_prices

./: .gitignore  current_products.json  prices_history.py  product_prices.db  products_history.json  pyproject.toml  scan_mm.py  scan_shops.py  scan_smart.py  shop_smart.json  shop_smart_history.json  smart_shop_history.py
pages/: catalog.py  cookies.py  main_page.py
products/: declaration.py
products/catalog/: products_history.json
utils/: __init__.py  config.py  init_db.py
utils/db_sqlite/: init_db.py  product_db.py
