[tool.poetry]
name = "shop-prices"
version = "0.1.0"
description = ""
authors = ["Andrei Arkhipov <it.arkhipov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc4"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
